# advent-of-code

./: .gitignore  Cargo.toml
input/2022/: 10.txt
src/: day.rs  helper.rs  main.rs  year.rs
src/helper/: adjacency.rs  ds.rs  graph.rs  grid.rs  maths.rs  mod.rs  point.rs  prelude.rs  shape.rs  shorthand.rs
src/year_2015/: day1.rs  day2.rs  day3.rs  day5.rs  mod.rs
src/year_2017/: day1.rs  day17.rs
src/year_2018/: day12.rs  day2.rs
src/year_2019/: day1.rs  day2.rs
src/year_2020/: day20.rs  mod.rs
src/year_2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/year_2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/year_2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/year_2025/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
