[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitvec = "1.0.1"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.10.5"
nom = "7.1.3"
ureq = "2.9.1"
